--- a/src/pages/AstronomyPicture/styles.css
+++ b/src/pages/AstronomyPicture/styles.css
@@ -11,28 +11,8 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Opcional, para agregar sombra */
 }
 
-#calendar {
-  font-size: 20px;
-  font-weight: bold;
-  background: rgb(82, 82, 83);
-  color: white;
-  height: 50px;
-  margin-left: 15px;
-  border: solid 1px;
-  border-radius: 50px;
-}
-
-#date-select {
-  margin: 10px 10px 10px 15px;
-  background: rgb(82, 82, 83, 0.8);
-  border-radius: 20px;
-  width: 100%; /* Asegúrate de que ocupe todo el ancho disponible */
-  max-width: 350px;
-  padding: 8px;
-}
-
 .bg-image {
-  color: white;
+  /*color: white;*/
   height: 100vh; /* Asegura que cubra toda la altura del viewport */
   background-image: url('../../assets/images/wp3.jpeg'); /* Ruta a tu imagen */
   background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
@@ -49,6 +29,27 @@
   box-sizing: border-box; /* Incluye el padding y borde en el cálculo del ancho */
 }
 
+ .title-dark{
+  color: white !important;
+  text-shadow: 
+  -0.5px -0.5px 0 black,  /* Sombras blancas en las cuatro direcciones */
+  0.5px -0.5px 0 black,
+  -0.5px  0.5px 0 black,
+  0.5px  0.5px 0 black;
+  font-weight: bold; /* Hacer el texto más grueso para un mejor efecto */
+  margin-left: 10px;
+ }
+
+ .title-light{
+  color: black !important;
+  text-shadow: 
+  -0.5px -0.5px 0 white,  /* Sombras blancas en las cuatro direcciones */
+  0.5px -0.5px 0 white,
+  -0.5px  0.5px 0 white,
+  0.5px  0.5px 0 white;
+  font-weight: bold; /* Hacer el texto más grueso para un mejor efecto */
+  margin-left: 10px;
+ }
 
 .img-custom-size{
 width: 600px;
@@ -58,13 +59,81 @@ margin: 10px;
 flex: 1 1 auto;
 }
 
-.container-text {
+.container-text-dark {
+color: white;
 background: rgb(82, 82, 83,0.8);
 padding: 10px;
 margin: 10px 0px 10px 10px;
 width: 400px;
 border-radius: 20px;
 flex: 1 1 auto;
+}
+
+.container-text-light {
+  color: rgb(0, 0, 0);
+  background: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  margin: 10px 0px 10px 10px;
+  width: 400px;
+  border-radius: 20px;
+  flex: 1 1 auto;
+  }
+
+.date-inputs{
+  color: black;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  display: inline-block;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-left: 10px;
+}
+
+.date-inputs-dark{
+  color: white;
+  background-color: rgb(82, 82, 83,0.8);
+  border-radius: 10px;
+  display: inline-block;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-left: 10px;
+}
+
+.date-inputs input {
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+  color: white; /* Texto en blanco */
+  border: 1px solid white; /* Borde blanco */
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.date-inputs-dark input {
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+  color: white; /* Texto en blanco */
+  border: 1px solid white; /* Borde blanco */
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.date-inputs input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* Para que el ícono del selector de fecha sea visible en fondos oscuros */
+}
+
+.date-inputs-dark input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* Para que el ícono del selector de fecha sea visible en fondos oscuros */
+}
+
+
+.date-inputs label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.date-inputs-dark label {
+  display: block;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 1100px) {
@@ -86,7 +155,7 @@ flex: 1 1 auto;
     width: 96%;
   }
 
-  #page-title {
+  .title-dark,.title-light {
     font-size: 18px;
     max-width: 270px;
   }
@@ -94,11 +163,6 @@ flex: 1 1 auto;
   #calendar {
     font-size: 18px;
     height: 45px;
-  }
-
-  #date-select {
-    max-width: 320px;
-    padding: 6px;
   }
 
   .container-text {
@@ -109,6 +173,15 @@ flex: 1 1 auto;
   .img-custom-size {
     max-width: 550px;
   }
+  .date-inputs input {
+    padding: 4px;
+    font-size: 12px;
+  }
+
+  .date-inputs-dark input {
+    padding: 4px;
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 400px) {
@@ -116,19 +189,14 @@ flex: 1 1 auto;
     width: 90%;
   }
 
-  #page-title {
-    font-size: 16px;
-    max-width: 250px;
+  .title-dark,.title-light {
+    font-size: 18px;
+    max-width: 270px;
   }
 
   #calendar {
     font-size: 16px;
     height: 40px;
-  }
-
-  #date-select {
-    max-width: 280px;
-    padding: 4px;
   }
 
   .container-text {
@@ -138,5 +206,15 @@ flex: 1 1 auto;
 
   .img-custom-size {
     max-width: 500px;
+  }
+
+  .date-inputs input {
+    padding: 3px;
+    font-size: 10px;
+  }
+
+  .date-inputs-dark input {
+    padding: 3px;
+    font-size: 10px;
   }
 }
