--- a/src/pages/Events/styles.css
+++ b/src/pages/Events/styles.css
@@ -9,6 +9,28 @@
   padding: 20px;
 }
 
+.title-dark{
+  color: white !important;
+  text-shadow: 
+  -0.5px -0.5px 0 black,  /* Sombras blancas en las cuatro direcciones */
+  0.5px -0.5px 0 black,
+  -0.5px  0.5px 0 black,
+  0.5px  0.5px 0 black;
+  font-weight: bold; /* Hacer el texto más grueso para un mejor efecto */
+  margin-left: 10px;
+ }
+
+ .title-light{
+  color: black !important;
+  text-shadow: 
+  -0.5px -0.5px 0 white,  /* Sombras blancas en las cuatro direcciones */
+  0.5px -0.5px 0 white,
+  -0.5px  0.5px 0 white,
+  0.5px  0.5px 0 white;
+  font-weight: bold; /* Hacer el texto más grueso para un mejor efecto */
+  margin-left: 10px;
+ }
+
 .result-container {
   padding: 5px;
   margin: 10px;
@@ -52,8 +74,38 @@
   font-weight: bold;
 }
 
+.date-inputs{
+  color: black;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  display: inline-block;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-left: 10px;
+}
+
+.date-inputs-dark{
+  color: white;
+  background-color: rgb(82, 82, 83,0.8);
+  border-radius: 10px;
+  display: inline-block;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-left: 10px;
+}
+
 
 .date-inputs input {
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+  color: white; /* Texto en blanco */
+  border: 1px solid white; /* Borde blanco */
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.date-inputs-dark input {
   background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
   color: white; /* Texto en blanco */
   border: 1px solid white; /* Borde blanco */
@@ -65,7 +117,16 @@
   filter: invert(1); /* Para que el ícono del selector de fecha sea visible en fondos oscuros */
 }
 
+.date-inputs-dark input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* Para que el ícono del selector de fecha sea visible en fondos oscuros */
+}
+
 .date-inputs label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.date-inputs-dark label {
   display: block;
   margin-bottom: 10px;
 }
@@ -130,6 +191,11 @@
     padding: 4px;
     font-size: 12px;
   }
+
+  .date-inputs-dark input {
+    padding: 4px;
+    font-size: 12px;
+  }
 }
 
 @media (max-width: 400px) {
@@ -165,6 +231,11 @@
   }
 
   .date-inputs input {
+    padding: 3px;
+    font-size: 10px;
+  }
+
+  .date-inputs-dark input {
     padding: 3px;
     font-size: 10px;
   }
