--- a/src/pages/Map/styles.css
+++ b/src/pages/Map/styles.css
@@ -11,6 +11,19 @@
     color: white;
     font-family: 'Arial', sans-serif;
   }
+
+  .map-container-light {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 20px;
+    background: rgba(179, 179, 179, 0.8);
+    border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    color: black;
+    font-family: 'Arial', sans-serif;
+  }
   
   .map-container h1 {
     font-size: 2rem;
