--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -7,6 +7,7 @@
   }
 
   .main-class {
+    margin-top: 50px;
     align-items: center;
     height: 100%;
   }
@@ -51,4 +52,28 @@
     border-width: 0px;
     margin: 20px;
     color: white;
+  }
+
+  @media (max-width: 768px) { 
+    .button-switch {
+      padding: 6px; 
+      font-size: 14px; 
+    }
+  
+    .h4-text {
+      font-size: 18px; 
+    }
+  }
+  
+  @media (max-width: 480px) { 
+    .button-switch {
+      padding: 5px; 
+      margin-left: 2px; 
+      font-size: 12px;
+    }
+  
+    .h4-text {
+      font-size: 16px; 
+      text-align: center; 
+    }
   }
